<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Geora</string>
    <string name="no_internet">No internet</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="crash_toast_text">Oops ! App crashed, but a report has been sent to  developers to help fix the issue !</string>
    <string name="h_fname">* Enter First Name</string>
    <string name="h_lname">* Enter Last Name</string>
    <string name="h_mname">Enter Middle Name</string>
    <string name="h_email">* Enter Email ID</string>
    <string name="email_invalid_val">Please enter the valid email id</string>
    <string name="h_password">* Enter Password</string>
    <string name="h_password_lenght">Password must be minimum 6 characters length</string>
    <string name="v_gender">Please select gender</string>
    <string name="v_postal">Please enter the valid postal code</string>
    <string name="v_number">Please enter the valid phone number</string>
    <string name="h_gender">* Enter Male / Female</string>
    <string name="h_dob">* Enter DOB (mm/dd/yyyy)</string>
    <string name="h_bio">Enter Biography</string>
    <string name="h_username">Enter Username</string>
    <string name="h_age">Enter Age</string>
    <string name="h_number">Enter Number</string>
    <string name="h_number_length">Enter 10 digit Number</string>
    <string name="phone_invalid_val">Please enter the valid phone numner</string>
    <string name="h_c_code">Enter Country Code</string>
    <string name="h_city">Enter City</string>
    <string name="h_postcal_code">Enter Postal Code</string>
    <string name="h_region">Enter Region</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="submit">Submit</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="please_enter_old_pass">Please enter your old password</string>
    <string name="new_valid">Please Enter New Password</string>
    <string name="confirm_valid">Please Enter Confirm Password</string>
    <string name="match">Old password and new password doesn\'t match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">You are successfully logged in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email">Please enter your email or Mobile Number</string>
    <string name="s_enter_email">Please enter your email</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_valid_password">Password must be greater than 6 characters</string>
    <string name="reset_password_link_sent">Reset password link sent to your email id</string>
    <string name="password_reset_success">Password reset successfully</string>
    <string name="new_password_empty">Please enter new password</string>
    <string name="confirm_password_empty">Please confirm password</string>
    <string name="password_not_matched"><![CDATA[New Password & Confirm Password are not same]]></string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="enter_phone">Please enter your number</string>
    <string name="enter_valid_phone">Please enter valid number</string>
    <string name="log_out_success">You are logged out successfully</string>
    <string name="password_changed_success">Password changed successfully</string>
    <string name="let_s_go">Let’s Go!</string>
    <string name="or_connect_with">OR connect with</string>
    <string name="sign_up">Sign Up!</string>
    <string name="sign_up_">Sign Up</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address_mobile_number">Email address / Mobile number</string>
    <string name="password">Password</string>
    <string name="please_enter_the_email_address_mobile_number_associated_with_your_account">Please enter the email address / mobile number associated with your account.</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_set_a_new_password_for_your_account">Please set a new password for your account.</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_verification_code_sent_to_you_on">Please enter the verification code sent to you on \n </string>
    <string name="enter_otp">Enter OTP</string>
    <string name="didn_t_receive_otp">Didn’t receive OTP?</string>
    <string name="resend">Resend</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_dob">Please Enter DOB</string>
    <string name="txt_enter_dob">Enter DOB</string>
    <string name="skip">Skip</string>
    <string name="create_profile">Create a Profile</string>
    <string name="choose_image">Choose Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="otp_must_be_6_digit">OTP must be 6 digit</string>
    <string name="all">All</string>
    <string name="promotions">Promotions</string>
    <string name="fundraising">Fundraisers</string>
    <string name="events">Events</string>
    <string name="sales">Sales</string>
    <string name="flat_no_building_name">Flat No., Building Name</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="pin_code">Pin code</string>
    <string name="address">Address</string>
    <string name="save_address">Save Address</string>
    <string name="google_place_key">AIzaSyB9fA35KdmS9IAhsxdhfeKwnrfbvv2An3c</string>
    <string name="facebook_key">299278947602273</string>
    <string name="fb_login_protocol_scheme">fb299278947602273</string>
    <string name="view_profile">View Profile</string>
    <string name="home">Home</string>
    <string name="_home">home</string>
    <string name="my_activities">My Activities</string>
    <string name="go_premium">Go Premium</string>
    <string name="about">About</string>
    <string name="become_a_business_user">Become a business user</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="select_proximity">Select Proximity</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="select_country">Select Country</string>
    <string name="host_must_implement_iloginhost">Host must be implemented</string>
    <string name="search_country">Select Country</string>
    <string name="search">Search</string>
    <string name="recall">Recall</string>
    <string name="no_offers">No Campaigns</string>
    <string name="seems_like_there_are_no_offers_available_in_this_area_right_now_click_on_map_view_to_see_offers_in_other_places">Seems like there are no active campaigns available in this area right now. Click on the Map View to see where offers are in other places.</string>
    <string name="expires_on">Expires on</string>
    <string name="selected_as_default">Selected as default</string>
    <string name="my_cards">My Cards</string>
    <string name="payment">Payment</string>
    <string name="add_card">Add Card</string>
    <string name="add_new_card">Add a New Card</string>
    <string name="don_t_worry_add_card_now_or_add_it_later_during_payment_process">You can add a card now or add it later during the payment process.</string>
    <string name="no_saved_cards">No Saved Cards</string>
    <string name="card_details">Card Details</string>
    <string name="add_new_address">Add New Address</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="save_this_card_for_future_transactions">Save this card for future transactions</string>
    <string name="no_saved_address">No Saved Addresses</string>
    <string name="don_t_worry_add_address_now_or_add_it_later_during_checkout_process">You can add your address now or add it later during the checkout process.</string>
    <string name="my_address">My Address</string>
    <string name="_114b_12th_avenue_street_one_hudson_yards_ny_new_york_12534">114B, 12th Avenue street, one hudson yards, NY, New york 12534</string>
    <string name="contact_details">Contact Details</string>
    <string name="type_of_address">Type of Address</string>
    <string name="cvv">CVV</string>
    <string name="enter_card_no">Enter Card Number</string>
    <string name="enter_cvv">Enter CVV</string>
    <string name="otp_resend_successfulyy">OTP Resend successfully</string>
    <string name="enter_expiry_date">Select expiry date</string>
    <string name="enter_valid_cvv">Enter valid CVV</string>
    <string name="enter_valid_card_no">Enter valid Card number</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="delete">Delete</string>
    <string name="set_default">Set As Default</string>
    <string name="edit">Edit</string>
    <string name="_edit">edit</string>
    <string name="s_my_profile">My Profile</string>
    <string name="s_edit">Edit</string>
    <string name="s_mobile_no">Mobile No.</string>
    <string name="s_date_of_birth">Date of Birth</string>
    <string name="s_my_cards">My Cards</string>
    <string name="s_my_address">My Address</string>
    <string name="s_my_categories">My Categories</string>
    <string name="s_save_changes">Save Changes</string>
    <string name="s_cancel">Cancel</string>
    <string name="s_edit_profile">Edit Profile</string>
    <string name="s_about_us">About Us</string>
    <string name="s_terms_and_condition">Terms And Condition</string>
    <string name="s_privacy_policy">Privacy Policy</string>
    <string name="s_share_app">Share App</string>
    <string name="s_rate_us">Rate Us</string>
    <string name="allow_geora_to_access_your_location_while_you_use_the_app">Allow “Geora” to access your location while you use the app?</string>
    <string name="your_current_location_will_be_used_for_directions_and_estimated_travel_times">Your current location will be used for directions and estimated travel times</string>
    <string name="don_t_allow">Don’t Allow</string>
    <string name="allow">Allow</string>
    <string name="s_email_not_verified">Email Not Verified</string>
    <string name="s_to_veriy_your_email_id_click_on_resend_to_get_a_verification_link_on_your_email_address">To veriy your email ID click on “Resend” to get a verification link on your email address.</string>
    <string name="s_or">OR</string>
    <string name="s_to_update_your_email_id_contact_with_the_admin_by_clicking_on_update">To update your email ID contact with the admin by clicking on “Update”.</string>
    <string name="s_resend">Resend</string>
    <string name="s_update">Update</string>
    <string name="s_close">Close</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="thank_you_for_payment_your_order_has_been_successfully_placed_with_us">Thank you for payment, your order has been successfully placed with us.</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="report">Report</string>
    <string name="please_write_the_reason_of_reporting_the_campaign">Please write the reason of reporting the campaign</string>
    <string name="enter_reason">Enter reason</string>
</resources>