<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="25dp"
    android:background="@color/White"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_old"
        style="@style/signup"
        android:hint="@string/old_pass"
        android:inputType="textPassword"
        android:maxLength="@integer/length_password" />

    <EditText
        android:id="@+id/et_new"
        style="@style/signup"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:maxLength="@integer/length_password" />

    <EditText
        android:id="@+id/et_confirm"
        style="@style/signup"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword"
        android:maxLength="@integer/length_password" />

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/submit" />

</LinearLayout>