<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_20sdp"
    android:layout_gravity="center"
    android:padding="@dimen/_12sdp"
    android:background="@drawable/black_rect_cor_round_blacl_two">
    <ImageView
        android:id="@+id/iv_email_not_verified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_email_not_verified_graphic"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_label_email_not_verified"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/White"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/s_email_not_verified"
        android:fontFamily="@font/sfuidisplaysemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_email_not_verified"
        />
    <TextView
        android:id="@+id/tv_verification_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/white_40"
        android:gravity="center_horizontal"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/s_to_veriy_your_email_id_click_on_resend_to_get_a_verification_link_on_your_email_address"
        app:layout_constraintTop_toBottomOf="@id/tv_label_email_not_verified"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:text="@string/s_or"
        android:fontFamily="@font/sfuidisplayregular"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verification_message"
        />
    <TextView
        android:id="@+id/tv_update_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_11ssp"
        android:textColor="@color/white_40"
        android:fontFamily="@font/sfuidisplayregular"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/s_to_update_your_email_id_contact_with_the_admin_by_clicking_on_update"
        app:layout_constraintTop_toBottomOf="@id/tv_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/butterscotch"
        android:text="@string/s_resend"
        android:padding="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sfuidisplaysemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_update_message"
        />
    <TextView
        android:id="@+id/tv_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/butterscotch"
        android:text="@string/s_update"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_4sdp"
        android:fontFamily="@font/sfuidisplaysemibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_update_message"
        />
    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white_40"
        android:gravity="center_horizontal"
        android:text="@string/s_close"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_resend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_4sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>