<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/black_rect_cor_round_blacl_two"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_payment_succesfull" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:padding="@dimen/_5sdp"
        android:text="@string/payment_successful"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfuidisplayregular"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/thank_you_for_payment_your_order_has_been_successfully_placed_with_us"
        android:textColor="@color/white__40"
        android:textSize="@dimen/_11ssp" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:padding="@dimen/_15sdp"
        android:text="@string/okay"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_13ssp" />
</LinearLayout>