<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/black_rect_cor_round_blacl_two">

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:padding="@dimen/_5sdp"
        android:text="@string/report"
        android:textColor="@color/White"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enter"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/sfuidisplayregular"
        android:gravity="center"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:text="@string/please_write_the_reason_of_reporting_the_campaign"
        android:textColor="@color/white_40"
        android:textSize="@dimen/_11ssp" />


    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_description"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/black_rect_cor_round"
        android:fontFamily="@font/sfuidisplayregular"
        android:hint="@string/enter_reason"
        android:imeOptions="actionDone"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="6"
        android:lines="6"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/White"
        android:textColorHint="@color/white_20"
        android:textSize="@dimen/_13ssp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_message"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textColor="@color/White"
        android:textSize="@dimen/_12ssp" />

    <TextView
        android:id="@+id/tv_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_message"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/sfuidisplaysemibold"
        android:padding="@dimen/_10sdp"
        android:text="@string/report"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12ssp" />
</RelativeLayout>